--- a/gtk-3.0/gtk-contained.css
+++ b/gtk-3.0/gtk-contained.css
@@ -1792,6 +1792,10 @@ window.background.chromium { background-color: #dededc; }
 
 window.background.chromium button { border-color: #b9b9b5; }
 
+window.background.chromium menubar { color: #f2f1f0; }
+
+window.background.chromium button.titlebutton, window.background.chromium button.titlebutton:backdrop { color: #f2f1f0; background-image: none; }
+
 .thunar .standard-view { border-width: 0; }
 
 .thunar .sidebar .view, .thunar .sidebar iconview { background-color: #efefee; }
